// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Description renders correctly 1`] = `
<DocumentFragment>
  .cache-17qw288 {
  font-size: 16px;
  line-height: 16px;
  margin: 0;
}

.cache-17qw288>.e1dzit6j2 {
  font-weight: 500;
  color: #151a2d;
}

.cache-17qw288>.e1dzit6j2:after {
  content: ':';
}

.cache-17qw288>.e1dzit6j1 {
  color: #4a4f62;
  margin: 0;
  margin-top: 8px;
}

.cache-17qw288 .e1dzit6j1+.e1dzit6j2 {
  margin-top: 16px;
}

<dl
    class="e1dzit6j0 cache-17qw288 e7ah3bn0"
  >
    <dt
      class="e1dzit6j2 cache-ykhhhn e7ah3bn0"
    >
      Name
    </dt>
    <dd
      class="e1dzit6j1 cache-ykhhhn e7ah3bn0"
    >
      Big instance
    </dd>
    <dt
      class="e1dzit6j2 cache-ykhhhn e7ah3bn0"
    >
      Size
    </dt>
    <dd
      class="e1dzit6j1 cache-ykhhhn e7ah3bn0"
    >
      125 GB
    </dd>
  </dl>
</DocumentFragment>
`;

exports[`Description renders correctly inline 1`] = `
<DocumentFragment>
  .cache-hjgvzj {
  font-size: 16px;
  line-height: 16px;
  margin: 0;
}

.cache-hjgvzj>.e1dzit6j2 {
  font-weight: 500;
  color: #151a2d;
}

.cache-hjgvzj>.e1dzit6j2:after {
  content: ':';
}

.cache-hjgvzj>.e1dzit6j1 {
  color: #4a4f62;
  margin: 0;
  margin-top: 8px;
}

.cache-hjgvzj .e1dzit6j1+.e1dzit6j2 {
  margin-top: 16px;
}

.cache-hjgvzj>.e1dzit6j2 {
  float: left;
  clear: left;
  margin-right: 8px;
}

.cache-hjgvzj>.e1dzit6j1 {
  margin-top: 0;
}

.cache-hjgvzj .e1dzit6j1+.e1dzit6j2+.e1dzit6j1 {
  margin-top: 16px;
}

<dl
    class="e1dzit6j0 cache-hjgvzj e7ah3bn0"
  >
    <dt
      class="e1dzit6j2 cache-ykhhhn e7ah3bn0"
    >
      Name
    </dt>
    <dd
      class="e1dzit6j1 cache-ykhhhn e7ah3bn0"
    >
      Big instance
    </dd>
    <dt
      class="e1dzit6j2 cache-ykhhhn e7ah3bn0"
    >
      Size
    </dt>
    <dd
      class="e1dzit6j1 cache-ykhhhn e7ah3bn0"
    >
      125 GB
    </dd>
  </dl>
</DocumentFragment>
`;

exports[`Description renders correctly seletable 1`] = `
<DocumentFragment>
  .cache-1tlwbec {
  font-size: 16px;
  line-height: 16px;
  margin: 0;
}

.cache-1tlwbec>.e1dzit6j2 {
  font-weight: 500;
  color: #151a2d;
}

.cache-1tlwbec>.e1dzit6j2:after {
  content: ':';
}

.cache-1tlwbec>.e1dzit6j1 {
  color: #4a4f62;
  margin: 0;
  margin-top: 8px;
}

.cache-1tlwbec .e1dzit6j1+.e1dzit6j2 {
  margin-top: 16px;
}

.cache-1tlwbec>.e1dzit6j2 {
  float: left;
  clear: left;
  margin-right: 8px;
}

.cache-1tlwbec>.e1dzit6j1 {
  margin-top: 0;
}

.cache-1tlwbec .e1dzit6j1+.e1dzit6j2+.e1dzit6j1 {
  margin-top: 16px;
}

.cache-1tlwbec>.e1dzit6j1 {
  -webkit-user-select: all;
  -moz-user-select: all;
  -ms-user-select: all;
  user-select: all;
}

.cache-1tlwbec>.e1dzit6j1::selection {
  color: #eeeeff;
  background: #4f0599;
}

<dl
    class="e1dzit6j0 cache-1tlwbec e7ah3bn0"
  >
    <dt
      class="e1dzit6j2 cache-ykhhhn e7ah3bn0"
    >
      Name
    </dt>
    <dd
      class="e1dzit6j1 cache-ykhhhn e7ah3bn0"
    >
      Big instance
    </dd>
    <dt
      class="e1dzit6j2 cache-ykhhhn e7ah3bn0"
    >
      Size
    </dt>
    <dd
      class="e1dzit6j1 cache-ykhhhn e7ah3bn0"
    >
      125 GB
    </dd>
  </dl>
</DocumentFragment>
`;
